Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -129789,5 +129789,293 @@
     "PPS": 1.0201226241733048,
     "VAULT_PNL_SPOT": 10477.911964000028,
     "FUEL": 2497601
+  },
+  "2025-05-21 09:40": {
+    "LTVL": 568541.621039,
+    "TVL_USD": 517677.712215,
+    "TVL_TOKEN": 517754.950898575,
+    "SHARES": 508015.341353,
+    "PPS": 1.0191718807539067,
+    "VAULT_PNL_SPOT": 9458.96265500004,
+    "FUEL": 2497601
+  },
+  "2025-05-21 09:50": {
+    "LTVL": 567870.830784,
+    "TVL_USD": 518213.69229200005,
+    "TVL_TOKEN": 518304.7377022248,
+    "SHARES": 508015.341353,
+    "PPS": 1.0202541055587435,
+    "VAULT_PNL_SPOT": 9458.96265500004,
+    "FUEL": 2497601
+  },
+  "2025-05-21 10:00": {
+    "LTVL": 568141.619116,
+    "TVL_USD": 518066.822069,
+    "TVL_TOKEN": 518144.45565279044,
+    "SHARES": 508015.341353,
+    "PPS": 1.0199385992415377,
+    "VAULT_PNL_SPOT": 9458.96265500004,
+    "FUEL": 2497601
+  },
+  "2025-05-21 10:10": {
+    "LTVL": 568313.068725,
+    "TVL_USD": 517699.022303,
+    "TVL_TOKEN": 517776.76130594243,
+    "SHARES": 508015.341353,
+    "PPS": 1.0192148133301344,
+    "VAULT_PNL_SPOT": 9945.975848303759,
+    "FUEL": 2497601
+  },
+  "2025-05-21 10:20": {
+    "LTVL": 568605.376378,
+    "TVL_USD": 517902.698557,
+    "TVL_TOKEN": 517982.4626764276,
+    "SHARES": 508015.341353,
+    "PPS": 1.019619725059645,
+    "VAULT_PNL_SPOT": 9945.975848303759,
+    "FUEL": 2497601
+  },
+  "2025-05-21 10:30": {
+    "LTVL": 568490.293215,
+    "TVL_USD": 518170.839671,
+    "TVL_TOKEN": 518257.9847511359,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201620749697373,
+    "VAULT_PNL_SPOT": 9945.975848303759,
+    "FUEL": 2497601
+  },
+  "2025-05-21 10:40": {
+    "LTVL": 568934.423143,
+    "TVL_USD": 517798.063246,
+    "TVL_TOKEN": 517870.596201704,
+    "SHARES": 508015.341353,
+    "PPS": 1.0193995221137544,
+    "VAULT_PNL_SPOT": 9783.870211162604,
+    "FUEL": 2497601
+  },
+  "2025-05-21 10:50": {
+    "LTVL": 568520.913166,
+    "TVL_USD": 517771.68706799997,
+    "TVL_TOKEN": 517841.7406986817,
+    "SHARES": 508015.341353,
+    "PPS": 1.0193427216577966,
+    "VAULT_PNL_SPOT": 9783.870211162604,
+    "FUEL": 2497601
+  },
+  "2025-05-21 11:00": {
+    "LTVL": 568474.993345,
+    "TVL_USD": 517660.698277,
+    "TVL_TOKEN": 517727.84240088094,
+    "SHARES": 508015.341353,
+    "PPS": 1.0191185191809633,
+    "VAULT_PNL_SPOT": 9783.870211162604,
+    "FUEL": 2497601
+  },
+  "2025-05-21 11:10": {
+    "LTVL": 569209.790619,
+    "TVL_USD": 517327.356966,
+    "TVL_TOKEN": 517399.19784462074,
+    "SHARES": 508015.341353,
+    "PPS": 1.018471600614715,
+    "VAULT_PNL_SPOT": 9547.090140275774,
+    "FUEL": 2497601
+  },
+  "2025-05-21 11:20": {
+    "LTVL": 570112.450113,
+    "TVL_USD": 517126.820346,
+    "TVL_TOKEN": 517191.8882574617,
+    "SHARES": 508015.341353,
+    "PPS": 1.0180635231999524,
+    "VAULT_PNL_SPOT": 9547.090140275774,
+    "FUEL": 2497601
+  },
+  "2025-05-21 11:30": {
+    "LTVL": 570818.092501,
+    "TVL_USD": 517842.921379,
+    "TVL_TOKEN": 517910.93344277976,
+    "SHARES": 508015.341353,
+    "PPS": 1.0194789237337296,
+    "VAULT_PNL_SPOT": 9547.090140275774,
+    "FUEL": 2497601
+  },
+  "2025-05-21 11:40": {
+    "LTVL": 570390.187836,
+    "TVL_USD": 517932.873632,
+    "TVL_TOKEN": 517997.17780165235,
+    "SHARES": 508015.341353,
+    "PPS": 1.0196486909668272,
+    "VAULT_PNL_SPOT": 9963.373959522403,
+    "FUEL": 2497601
+  },
+  "2025-05-21 11:50": {
+    "LTVL": 570938.825331,
+    "TVL_USD": 518465.489037,
+    "TVL_TOKEN": 518536.20181884203,
+    "SHARES": 508015.341353,
+    "PPS": 1.0207097298239494,
+    "VAULT_PNL_SPOT": 9963.373959522403,
+    "FUEL": 2497601
+  },
+  "2025-05-21 12:00": {
+    "LTVL": 570764.517081,
+    "TVL_USD": 518227.52763900004,
+    "TVL_TOKEN": 518295.40878868906,
+    "SHARES": 508015.341353,
+    "PPS": 1.0202357421102877,
+    "VAULT_PNL_SPOT": 9963.373959522403,
+    "FUEL": 2497601
+  },
+  "2025-05-21 12:10": {
+    "LTVL": 569678.014272,
+    "TVL_USD": 518143.113848,
+    "TVL_TOKEN": 518204.0650101265,
+    "SHARES": 508015.341353,
+    "PPS": 1.0200559369525943,
+    "VAULT_PNL_SPOT": 10011.376263697224,
+    "FUEL": 2501021
+  },
+  "2025-05-21 12:20": {
+    "LTVL": 571043.671032,
+    "TVL_USD": 517638.88971500006,
+    "TVL_TOKEN": 517711.0482809095,
+    "SHARES": 508015.341353,
+    "PPS": 1.0190854608880253,
+    "VAULT_PNL_SPOT": 10011.376263697224,
+    "FUEL": 2501021
+  },
+  "2025-05-21 12:30": {
+    "LTVL": 571625.172259,
+    "TVL_USD": 517866.621184,
+    "TVL_TOKEN": 517942.86237334134,
+    "SHARES": 508015.341353,
+    "PPS": 1.0195417740611952,
+    "VAULT_PNL_SPOT": 10011.376263697224,
+    "FUEL": 2501021
+  },
+  "2025-05-21 12:40": {
+    "LTVL": 570994.703496,
+    "TVL_USD": 518024.176168,
+    "TVL_TOKEN": 518087.2947431185,
+    "SHARES": 508015.341353,
+    "PPS": 1.0198260811637967,
+    "VAULT_PNL_SPOT": 9838.970395780343,
+    "FUEL": 2501021
+  },
+  "2025-05-21 12:50": {
+    "LTVL": 570491.366011,
+    "TVL_USD": 517971.088993,
+    "TVL_TOKEN": 518040.6463105801,
+    "SHARES": 508015.341353,
+    "PPS": 1.0197342563137555,
+    "VAULT_PNL_SPOT": 9838.970395780343,
+    "FUEL": 2501021
+  },
+  "2025-05-21 13:00": {
+    "LTVL": 570548.772987,
+    "TVL_USD": 517927.074869,
+    "TVL_TOKEN": 517994.5229358315,
+    "SHARES": 508015.341353,
+    "PPS": 1.019643465010828,
+    "VAULT_PNL_SPOT": 9838.970395780343,
+    "FUEL": 2501021
+  },
+  "2025-05-21 13:10": {
+    "LTVL": 569958.066009,
+    "TVL_USD": 518025.159844,
+    "TVL_TOKEN": 518096.9110852162,
+    "SHARES": 508015.341353,
+    "PPS": 1.0198450103994219,
+    "VAULT_PNL_SPOT": 10070.363220491505,
+    "FUEL": 2501021
+  },
+  "2025-05-21 13:20": {
+    "LTVL": 569436.870468,
+    "TVL_USD": 517945.097137,
+    "TVL_TOKEN": 518022.60367896245,
+    "SHARES": 508015.341353,
+    "PPS": 1.0196987403949456,
+    "VAULT_PNL_SPOT": 10070.363220491505,
+    "FUEL": 2501021
+  },
+  "2025-05-21 13:30": {
+    "LTVL": 569590.405674,
+    "TVL_USD": 518110.363128,
+    "TVL_TOKEN": 518196.3837276988,
+    "SHARES": 508015.341353,
+    "PPS": 1.0200408167745163,
+    "VAULT_PNL_SPOT": 10070.363220491505,
+    "FUEL": 2501021
+  },
+  "2025-05-21 13:40": {
+    "LTVL": 570808.479858,
+    "TVL_USD": 517878.910514,
+    "TVL_TOKEN": 517947.2173930298,
+    "SHARES": 508015.341353,
+    "PPS": 1.019550346675709,
+    "VAULT_PNL_SPOT": 9135.629108000023,
+    "FUEL": 2501021
+  },
+  "2025-05-21 13:50": {
+    "LTVL": 571433.441698,
+    "TVL_USD": 517809.521782,
+    "TVL_TOKEN": 517908.16775071155,
+    "SHARES": 508015.341353,
+    "PPS": 1.0194734796224143,
+    "VAULT_PNL_SPOT": 9135.629108000023,
+    "FUEL": 2501021
+  },
+  "2025-05-21 14:00": {
+    "LTVL": 571555.634586,
+    "TVL_USD": 518131.61862,
+    "TVL_TOKEN": 518237.6137591422,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201219758027722,
+    "VAULT_PNL_SPOT": 9199.99506914895,
+    "FUEL": 2501021
+  },
+  "2025-05-21 14:10": {
+    "LTVL": 571600.87825,
+    "TVL_USD": 517643.087744,
+    "TVL_TOKEN": 517739.03514199256,
+    "SHARES": 508015.341353,
+    "PPS": 1.019140551470543,
+    "VAULT_PNL_SPOT": 9756.737850000034,
+    "FUEL": 2501021
+  },
+  "2025-05-21 14:20": {
+    "LTVL": 572221.070679,
+    "TVL_USD": 517322.485415,
+    "TVL_TOKEN": 517412.8722696568,
+    "SHARES": 508015.341353,
+    "PPS": 1.018498517961344,
+    "VAULT_PNL_SPOT": 9756.737850000034,
+    "FUEL": 2501021
+  },
+  "2025-05-21 14:30": {
+    "LTVL": 572092.444343,
+    "TVL_USD": 518370.27862,
+    "TVL_TOKEN": 518459.4380895683,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205586246839562,
+    "VAULT_PNL_SPOT": 9756.737850000034,
+    "FUEL": 2501021
+  },
+  "2025-05-21 14:40": {
+    "LTVL": 571782.064518,
+    "TVL_USD": 517597.176242,
+    "TVL_TOKEN": 517693.62256388366,
+    "SHARES": 508015.341353,
+    "PPS": 1.019051159331345,
+    "VAULT_PNL_SPOT": 10347.796231000044,
+    "FUEL": 2501021
+  },
+  "2025-05-21 14:50": {
+    "LTVL": 573794.283774,
+    "TVL_USD": 517753.597347,
+    "TVL_TOKEN": 517831.1839932977,
+    "SHARES": 508015.341353,
+    "PPS": 1.0193219413692411,
+    "VAULT_PNL_SPOT": 10347.796231000044,
+    "FUEL": 2501021
   }
 }
