Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -130077,5 +130077,167 @@
     "PPS": 1.0193219413692411,
     "VAULT_PNL_SPOT": 10347.796231000044,
     "FUEL": 2501021
+  },
+  "2025-05-21 15:00": {
+    "LTVL": 576579.330374,
+    "TVL_USD": 516975.234235,
+    "TVL_TOKEN": 517052.7456120947,
+    "SHARES": 508015.341353,
+    "PPS": 1.0177896286262247,
+    "VAULT_PNL_SPOT": 10347.796231000044,
+    "FUEL": 2501021
+  },
+  "2025-05-21 15:10": {
+    "LTVL": 577909.671653,
+    "TVL_USD": 517678.093608,
+    "TVL_TOKEN": 517755.77768488385,
+    "SHARES": 508015.341353,
+    "PPS": 1.0191735082368616,
+    "VAULT_PNL_SPOT": 9685.220933000033,
+    "FUEL": 2505289
+  },
+  "2025-05-21 15:20": {
+    "LTVL": 576885.435385,
+    "TVL_USD": 518399.82649,
+    "TVL_TOKEN": 518509.8179776876,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206577946971789,
+    "VAULT_PNL_SPOT": 9685.220933000033,
+    "FUEL": 2505289
+  },
+  "2025-05-21 15:30": {
+    "LTVL": 577252.308177,
+    "TVL_USD": 518296.323082,
+    "TVL_TOKEN": 518374.016979665,
+    "SHARES": 508015.341353,
+    "PPS": 1.020390477970757,
+    "VAULT_PNL_SPOT": 9685.220933000033,
+    "FUEL": 2505289
+  },
+  "2025-05-21 15:40": {
+    "LTVL": 574995.008327,
+    "TVL_USD": 518414.290545,
+    "TVL_TOKEN": 518540.3010235517,
+    "SHARES": 508015.341353,
+    "PPS": 1.0207177988808773,
+    "VAULT_PNL_SPOT": 10106.395286569837,
+    "FUEL": 2505289
+  },
+  "2025-05-21 15:50": {
+    "LTVL": 575778.659192,
+    "TVL_USD": 518502.39907100005,
+    "TVL_TOKEN": 518584.050129693,
+    "SHARES": 508015.341353,
+    "PPS": 1.0208039165678446,
+    "VAULT_PNL_SPOT": 10106.395286569837,
+    "FUEL": 2505289
+  },
+  "2025-05-21 16:00": {
+    "LTVL": 576895.433798,
+    "TVL_USD": 518557.955426,
+    "TVL_TOKEN": 518611.6317298841,
+    "SHARES": 508015.341353,
+    "PPS": 1.0208582094167922,
+    "VAULT_PNL_SPOT": 10106.395286569837,
+    "FUEL": 2505289
+  },
+  "2025-05-21 16:10": {
+    "LTVL": 576000.293419,
+    "TVL_USD": 518377.730454,
+    "TVL_TOKEN": 518478.84938399534,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205968347395333,
+    "VAULT_PNL_SPOT": 10241.017489999998,
+    "FUEL": 2505289
+  },
+  "2025-05-21 16:20": {
+    "LTVL": 577181.687342,
+    "TVL_USD": 518666.037079,
+    "TVL_TOKEN": 518757.40582088724,
+    "SHARES": 508015.341353,
+    "PPS": 1.0211451576231494,
+    "VAULT_PNL_SPOT": 10241.017489999998,
+    "FUEL": 2505289
+  },
+  "2025-05-21 16:30": {
+    "LTVL": 577241.730078,
+    "TVL_USD": 518316.986829,
+    "TVL_TOKEN": 518423.3932304606,
+    "SHARES": 508015.341353,
+    "PPS": 1.020487672379619,
+    "VAULT_PNL_SPOT": 10241.017489999998,
+    "FUEL": 2505289
+  },
+  "2025-05-21 16:40": {
+    "LTVL": 579657.723961,
+    "TVL_USD": 518106.90718100005,
+    "TVL_TOKEN": 518193.70980933023,
+    "SHARES": 508015.341353,
+    "PPS": 1.0200355533146344,
+    "VAULT_PNL_SPOT": 9208.22624400002,
+    "FUEL": 2505289
+  },
+  "2025-05-21 16:50": {
+    "LTVL": 580416.208015,
+    "TVL_USD": 518007.88094299997,
+    "TVL_TOKEN": 518090.3557467313,
+    "SHARES": 508015.341353,
+    "PPS": 1.019832106579495,
+    "VAULT_PNL_SPOT": 9208.22624400002,
+    "FUEL": 2505289
+  },
+  "2025-05-21 17:00": {
+    "LTVL": 578859.966519,
+    "TVL_USD": 518688.934702,
+    "TVL_TOKEN": 518778.3669046707,
+    "SHARES": 508015.341353,
+    "PPS": 1.021186418353047,
+    "VAULT_PNL_SPOT": 9208.22624400002,
+    "FUEL": 2505289
+  },
+  "2025-05-21 17:10": {
+    "LTVL": 578487.29511,
+    "TVL_USD": 519086.73265,
+    "TVL_TOKEN": 519179.90467569313,
+    "SHARES": 508015.341353,
+    "PPS": 1.021976823166321,
+    "VAULT_PNL_SPOT": 9902.68221900001,
+    "FUEL": 2505289
+  },
+  "2025-05-21 17:20": {
+    "LTVL": 575188.344194,
+    "TVL_USD": 518497.46581100003,
+    "TVL_TOKEN": 518598.763707515,
+    "SHARES": 508015.341353,
+    "PPS": 1.0208328794290504,
+    "VAULT_PNL_SPOT": 9902.68221900001,
+    "FUEL": 2505289
+  },
+  "2025-05-21 17:30": {
+    "LTVL": 568684.976613,
+    "TVL_USD": 520529.679912,
+    "TVL_TOKEN": 520631.20820391184,
+    "SHARES": 508015.341353,
+    "PPS": 1.024833633601127,
+    "VAULT_PNL_SPOT": 9902.68221900001,
+    "FUEL": 2505289
+  },
+  "2025-05-21 17:40": {
+    "LTVL": 569590.899191,
+    "TVL_USD": 518511.767055,
+    "TVL_TOKEN": 518614.1207378688,
+    "SHARES": 508015.341353,
+    "PPS": 1.0208631088908477,
+    "VAULT_PNL_SPOT": 8930.262424000015,
+    "FUEL": 2505289
+  },
+  "2025-05-21 17:50": {
+    "LTVL": 568285.118687,
+    "TVL_USD": 519020.206106,
+    "TVL_TOKEN": 519145.6576541721,
+    "SHARES": 508015.341353,
+    "PPS": 1.0219094098054768,
+    "VAULT_PNL_SPOT": 8930.262424000015,
+    "FUEL": 2505289
   }
 }
