Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -130392,5 +130392,266 @@
     "PPS": 1.0207261561906906,
     "VAULT_PNL_SPOT": 9964.861042132019,
     "FUEL": 2519501
+  },
+  "2025-05-21 20:50": {
+    "LTVL": 571771.132291,
+    "TVL_USD": 518249.981994,
+    "TVL_TOKEN": 518339.836204606,
+    "SHARES": 508015.341353,
+    "PPS": 1.020323195012396,
+    "VAULT_PNL_SPOT": 9964.861042132019,
+    "FUEL": 2519501
+  },
+  "2025-05-21 21:00": {
+    "LTVL": 571437.29608,
+    "TVL_USD": 517896.40278799995,
+    "TVL_TOKEN": 517998.9251352627,
+    "SHARES": 508015.341353,
+    "PPS": 1.0196521304960464,
+    "VAULT_PNL_SPOT": 9964.861042132019,
+    "FUEL": 2519501
+  },
+  "2025-05-21 21:10": {
+    "LTVL": 572236.320751,
+    "TVL_USD": 517666.733087,
+    "TVL_TOKEN": 517780.85198677785,
+    "SHARES": 508015.341353,
+    "PPS": 1.0192228656082891,
+    "VAULT_PNL_SPOT": 9952.000031250645,
+    "FUEL": 2519501
+  },
+  "2025-05-21 21:20": {
+    "LTVL": 571672.265625,
+    "TVL_USD": 517770.749838,
+    "TVL_TOKEN": 517879.5304333675,
+    "SHARES": 508015.341353,
+    "PPS": 1.0194171086528532,
+    "VAULT_PNL_SPOT": 9952.000031250645,
+    "FUEL": 2519501
+  },
+  "2025-05-21 21:30": {
+    "LTVL": 571553.42353,
+    "TVL_USD": 518266.737967,
+    "TVL_TOKEN": 518381.6839215928,
+    "SHARES": 508015.341353,
+    "PPS": 1.0204055699203571,
+    "VAULT_PNL_SPOT": 9952.000031250645,
+    "FUEL": 2519501
+  },
+  "2025-05-21 21:40": {
+    "LTVL": 572170.952708,
+    "TVL_USD": 517914.647821,
+    "TVL_TOKEN": 518025.7073523993,
+    "SHARES": 508015.341353,
+    "PPS": 1.0197048498038241,
+    "VAULT_PNL_SPOT": 9828.124951927806,
+    "FUEL": 2519501
+  },
+  "2025-05-21 21:50": {
+    "LTVL": 573085.803062,
+    "TVL_USD": 518381.19423100003,
+    "TVL_TOKEN": 518475.28712610767,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205898226326189,
+    "VAULT_PNL_SPOT": 9828.124951927806,
+    "FUEL": 2519501
+  },
+  "2025-05-21 22:00": {
+    "LTVL": 572199.552894,
+    "TVL_USD": 518089.963143,
+    "TVL_TOKEN": 518180.2301390902,
+    "SHARES": 508015.341353,
+    "PPS": 1.0200090193320106,
+    "VAULT_PNL_SPOT": 9828.124951927806,
+    "FUEL": 2519501
+  },
+  "2025-05-21 22:10": {
+    "LTVL": 571957.407321,
+    "TVL_USD": 518196.485458,
+    "TVL_TOKEN": 518318.97459807695,
+    "SHARES": 508015.341353,
+    "PPS": 1.0202821300979519,
+    "VAULT_PNL_SPOT": 9554.82887222874,
+    "FUEL": 2519501
+  },
+  "2025-05-21 22:20": {
+    "LTVL": 572290.771474,
+    "TVL_USD": 518029.10552000004,
+    "TVL_TOKEN": 518118.85924998793,
+    "SHARES": 508015.341353,
+    "PPS": 1.019888214143453,
+    "VAULT_PNL_SPOT": 9554.82887222874,
+    "FUEL": 2519501
+  },
+  "2025-05-21 22:30": {
+    "LTVL": 573512.890079,
+    "TVL_USD": 517823.937054,
+    "TVL_TOKEN": 517909.2626050142,
+    "SHARES": 508015.341353,
+    "PPS": 1.0194756347823348,
+    "VAULT_PNL_SPOT": 9554.82887222874,
+    "FUEL": 2519501
+  },
+  "2025-05-21 22:40": {
+    "LTVL": 574140.646701,
+    "TVL_USD": 518594.63484799996,
+    "TVL_TOKEN": 518672.8662764205,
+    "SHARES": 508015.341353,
+    "PPS": 1.020978746222577,
+    "VAULT_PNL_SPOT": 9275.184239133203,
+    "FUEL": 2519501
+  },
+  "2025-05-21 22:50": {
+    "LTVL": 574714.190563,
+    "TVL_USD": 518357.009374,
+    "TVL_TOKEN": 518441.62423149083,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205235590931614,
+    "VAULT_PNL_SPOT": 9275.184239133203,
+    "FUEL": 2519501
+  },
+  "2025-05-21 23:00": {
+    "LTVL": 574955.857818,
+    "TVL_USD": 518125.177601,
+    "TVL_TOKEN": 518203.3382105023,
+    "SHARES": 508015.341353,
+    "PPS": 1.020054506287878,
+    "VAULT_PNL_SPOT": 9275.184239133203,
+    "FUEL": 2519501
+  },
+  "2025-05-21 23:10": {
+    "LTVL": 574397.686569,
+    "TVL_USD": 518187.510072,
+    "TVL_TOKEN": 518280.9664958785,
+    "SHARES": 508015.341353,
+    "PPS": 1.020207313258568,
+    "VAULT_PNL_SPOT": 10334.315584000025,
+    "FUEL": 2519501
+  },
+  "2025-05-21 23:20": {
+    "LTVL": 576167.358315,
+    "TVL_USD": 518156.12136,
+    "TVL_TOKEN": 518226.24773584364,
+    "SHARES": 508015.341353,
+    "PPS": 1.0200996024168263,
+    "VAULT_PNL_SPOT": 10334.315584000025,
+    "FUEL": 2519501
+  },
+  "2025-05-21 23:30": {
+    "LTVL": 578976.53245,
+    "TVL_USD": 518452.299688,
+    "TVL_TOKEN": 518578.8329232333,
+    "SHARES": 508015.341353,
+    "PPS": 1.020793646786531,
+    "VAULT_PNL_SPOT": 10334.315584000025,
+    "FUEL": 2519501
+  },
+  "2025-05-21 23:40": {
+    "LTVL": 578612.734975,
+    "TVL_USD": 518098.844424,
+    "TVL_TOKEN": 518186.5008524842,
+    "SHARES": 508015.341353,
+    "PPS": 1.0200213628832453,
+    "VAULT_PNL_SPOT": 8733.959835000045,
+    "FUEL": 2519501
+  },
+  "2025-05-21 23:50": {
+    "LTVL": 578504.385834,
+    "TVL_USD": 518138.826501,
+    "TVL_TOKEN": 518239.0954011782,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201248923328756,
+    "VAULT_PNL_SPOT": 8733.959835000045,
+    "FUEL": 2519501
+  },
+  "2025-05-22 00:00": {
+    "LTVL": 577994.245459,
+    "TVL_USD": 518079.827516,
+    "TVL_TOKEN": 518148.191988451,
+    "SHARES": 508015.341353,
+    "PPS": 1.019945954010885,
+    "VAULT_PNL_SPOT": 8733.959835000045,
+    "FUEL": 2526979
+  },
+  "2025-05-22 00:10": {
+    "LTVL": 578576.951247,
+    "TVL_USD": 517371.337326,
+    "TVL_TOKEN": 517451.2990752461,
+    "SHARES": 508015.341353,
+    "PPS": 1.0185741589951107,
+    "VAULT_PNL_SPOT": 10321.79642800003,
+    "FUEL": 2526979
+  },
+  "2025-05-22 00:20": {
+    "LTVL": 578722.262382,
+    "TVL_USD": 518093.88161000004,
+    "TVL_TOKEN": 518167.9122596246,
+    "SHARES": 508015.341353,
+    "PPS": 1.0199847722700364,
+    "VAULT_PNL_SPOT": 10321.79642800003,
+    "FUEL": 2528319
+  },
+  "2025-05-22 00:30": {
+    "LTVL": 579118.972422,
+    "TVL_USD": 518746.57033699995,
+    "TVL_TOKEN": 518819.5993838092,
+    "SHARES": 508015.341353,
+    "PPS": 1.021267582199455,
+    "VAULT_PNL_SPOT": 10321.79642800003,
+    "FUEL": 2528319
+  },
+  "2025-05-22 00:40": {
+    "LTVL": 579440.103198,
+    "TVL_USD": 519224.45416900003,
+    "TVL_TOKEN": 519300.8848732357,
+    "SHARES": 508015.341353,
+    "PPS": 1.0222149659696866,
+    "VAULT_PNL_SPOT": 9981.232885000005,
+    "FUEL": 2528319
+  },
+  "2025-05-22 00:50": {
+    "LTVL": 578558.040195,
+    "TVL_USD": 518476.819617,
+    "TVL_TOKEN": 518543.42133403616,
+    "SHARES": 508015.341353,
+    "PPS": 1.0207239410388604,
+    "VAULT_PNL_SPOT": 9981.232885000005,
+    "FUEL": 2528319
+  },
+  "2025-05-22 01:00": {
+    "LTVL": 579903.503599,
+    "TVL_USD": 517580.555085,
+    "TVL_TOKEN": 517661.3206042407,
+    "SHARES": 508015.341353,
+    "PPS": 1.0189875747168393,
+    "VAULT_PNL_SPOT": 9981.232885000005,
+    "FUEL": 2528319
+  },
+  "2025-05-22 01:10": {
+    "LTVL": 580935.587045,
+    "TVL_USD": 518798.66288,
+    "TVL_TOKEN": 518883.0643992552,
+    "SHARES": 508015.341353,
+    "PPS": 1.0213925095594774,
+    "VAULT_PNL_SPOT": 10036.265711000015,
+    "FUEL": 2528319
+  },
+  "2025-05-22 01:20": {
+    "LTVL": 580994.166027,
+    "TVL_USD": 519266.371149,
+    "TVL_TOKEN": 519362.6246242216,
+    "SHARES": 508015.341353,
+    "PPS": 1.022336497242387,
+    "VAULT_PNL_SPOT": 10036.265711000015,
+    "FUEL": 2528319
+  },
+  "2025-05-22 01:30": {
+    "LTVL": 579905.002414,
+    "TVL_USD": 518005.439297,
+    "TVL_TOKEN": 518098.8939754953,
+    "SHARES": 508015.341353,
+    "PPS": 1.019848913608868,
+    "VAULT_PNL_SPOT": 10036.265711000015,
+    "FUEL": 2528319
   }
 }
