Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -130653,5 +130653,230 @@
     "PPS": 1.019848913608868,
     "VAULT_PNL_SPOT": 10036.265711000015,
     "FUEL": 2528319
+  },
+  "2025-05-22 01:40": {
+    "LTVL": 578900.693992,
+    "TVL_USD": 519179.54751,
+    "TVL_TOKEN": 519269.6044374976,
+    "SHARES": 508015.341353,
+    "PPS": 1.022153392168284,
+    "VAULT_PNL_SPOT": 9508.891002000018,
+    "FUEL": 2528319
+  },
+  "2025-05-22 01:50": {
+    "LTVL": 577874.559475,
+    "TVL_USD": 518553.390197,
+    "TVL_TOKEN": 518649.0394528559,
+    "SHARES": 508015.341353,
+    "PPS": 1.0209318444429947,
+    "VAULT_PNL_SPOT": 9508.891002000018,
+    "FUEL": 2528319
+  },
+  "2025-05-22 02:00": {
+    "LTVL": 578401.551184,
+    "TVL_USD": 518468.70818,
+    "TVL_TOKEN": 518557.1895932603,
+    "SHARES": 508015.341353,
+    "PPS": 1.0207510430928801,
+    "VAULT_PNL_SPOT": 9508.891002000018,
+    "FUEL": 2528319
+  },
+  "2025-05-22 02:10": {
+    "LTVL": 578663.290343,
+    "TVL_USD": 517911.977169,
+    "TVL_TOKEN": 517979.257494756,
+    "SHARES": 508015.341353,
+    "PPS": 1.019613415837441,
+    "VAULT_PNL_SPOT": 10099.423524999991,
+    "FUEL": 2528319
+  },
+  "2025-05-22 02:20": {
+    "LTVL": 578599.985776,
+    "TVL_USD": 517826.442419,
+    "TVL_TOKEN": 517906.79565834644,
+    "SHARES": 508015.341353,
+    "PPS": 1.0194707787347572,
+    "VAULT_PNL_SPOT": 10099.423524999991,
+    "FUEL": 2528319
+  },
+  "2025-05-22 02:30": {
+    "LTVL": 579733.030722,
+    "TVL_USD": 518132.05055600003,
+    "TVL_TOKEN": 518214.29116400774,
+    "SHARES": 508015.341353,
+    "PPS": 1.0200760665688655,
+    "VAULT_PNL_SPOT": 10099.423524999991,
+    "FUEL": 2528319
+  },
+  "2025-05-22 02:40": {
+    "LTVL": 580962.062406,
+    "TVL_USD": 518355.13026299997,
+    "TVL_TOKEN": 518447.0094420133,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205341595811468,
+    "VAULT_PNL_SPOT": 9269.145010000037,
+    "FUEL": 2528319
+  },
+  "2025-05-22 02:50": {
+    "LTVL": 580302.337334,
+    "TVL_USD": 518504.627726,
+    "TVL_TOKEN": 518594.6038897749,
+    "SHARES": 508015.341353,
+    "PPS": 1.0208246910587366,
+    "VAULT_PNL_SPOT": 9269.145010000037,
+    "FUEL": 2532541
+  },
+  "2025-05-22 03:00": {
+    "LTVL": 580418.385898,
+    "TVL_USD": 518352.736958,
+    "TVL_TOKEN": 518448.7744089715,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205376338206325,
+    "VAULT_PNL_SPOT": 9269.145010000037,
+    "FUEL": 2532541
+  },
+  "2025-05-22 03:10": {
+    "LTVL": 580150.578917,
+    "TVL_USD": 518108.996588,
+    "TVL_TOKEN": 518189.6787209768,
+    "SHARES": 508015.341353,
+    "PPS": 1.0200276183409727,
+    "VAULT_PNL_SPOT": 10333.593941,
+    "FUEL": 2532541
+  },
+  "2025-05-22 03:20": {
+    "LTVL": 580172.794429,
+    "TVL_USD": 518305.023459,
+    "TVL_TOKEN": 518373.0599231149,
+    "SHARES": 508015.341353,
+    "PPS": 1.0203885940580635,
+    "VAULT_PNL_SPOT": 10333.593941,
+    "FUEL": 2532541
+  },
+  "2025-05-22 03:30": {
+    "LTVL": 581024.184951,
+    "TVL_USD": 517810.86732,
+    "TVL_TOKEN": 517882.49046843185,
+    "SHARES": 508015.341353,
+    "PPS": 1.0194229353175686,
+    "VAULT_PNL_SPOT": 10333.593941,
+    "FUEL": 2532541
+  },
+  "2025-05-22 03:40": {
+    "LTVL": 581928.971892,
+    "TVL_USD": 518336.912619,
+    "TVL_TOKEN": 518416.22511728073,
+    "SHARES": 508015.341353,
+    "PPS": 1.0204735623467196,
+    "VAULT_PNL_SPOT": 9255.472007000004,
+    "FUEL": 2532541
+  },
+  "2025-05-22 03:50": {
+    "LTVL": 584094.315652,
+    "TVL_USD": 517019.83744000003,
+    "TVL_TOKEN": 517109.7938597399,
+    "SHARES": 508015.341353,
+    "PPS": 1.0179019249350199,
+    "VAULT_PNL_SPOT": 9255.472007000004,
+    "FUEL": 2532541
+  },
+  "2025-05-22 04:00": {
+    "LTVL": 584751.058121,
+    "TVL_USD": 518248.184848,
+    "TVL_TOKEN": 518340.4442636745,
+    "SHARES": 508015.341353,
+    "PPS": 1.0203243919429197,
+    "VAULT_PNL_SPOT": 9255.472007000004,
+    "FUEL": 2532541
+  },
+  "2025-05-22 04:10": {
+    "LTVL": 583537.634393,
+    "TVL_USD": 518244.328064,
+    "TVL_TOKEN": 518336.35868448444,
+    "SHARES": 508015.341353,
+    "PPS": 1.0203163497070706,
+    "VAULT_PNL_SPOT": 9609.637581000046,
+    "FUEL": 2532541
+  },
+  "2025-05-22 04:20": {
+    "LTVL": 583649.512071,
+    "TVL_USD": 520501.813222,
+    "TVL_TOKEN": 520579.1764934187,
+    "SHARES": 510973.595591,
+    "PPS": 1.0187985856515906,
+    "VAULT_PNL_SPOT": 9609.637581000046,
+    "FUEL": 2532541
+  },
+  "2025-05-22 04:30": {
+    "LTVL": 584024.104267,
+    "TVL_USD": 521545.013855,
+    "TVL_TOKEN": 521629.80477976694,
+    "SHARES": 510973.595591,
+    "PPS": 1.0208547159397576,
+    "VAULT_PNL_SPOT": 9609.637581000046,
+    "FUEL": 2532541
+  },
+  "2025-05-22 04:40": {
+    "LTVL": 584254.797745,
+    "TVL_USD": 521487.75428,
+    "TVL_TOKEN": 521580.8512461389,
+    "SHARES": 510973.595591,
+    "PPS": 1.020758911510624,
+    "VAULT_PNL_SPOT": 10543.56725600001,
+    "FUEL": 2532541
+  },
+  "2025-05-22 04:50": {
+    "LTVL": 585035.494807,
+    "TVL_USD": 521711.37551499996,
+    "TVL_TOKEN": 521800.66604497354,
+    "SHARES": 510973.595591,
+    "PPS": 1.0211890996861606,
+    "VAULT_PNL_SPOT": 10543.56725600001,
+    "FUEL": 2532541
+  },
+  "2025-05-22 05:00": {
+    "LTVL": 584804.295463,
+    "TVL_USD": 521461.188406,
+    "TVL_TOKEN": 521577.3958497953,
+    "SHARES": 510973.595591,
+    "PPS": 1.0207521491331284,
+    "VAULT_PNL_SPOT": 10543.56725600001,
+    "FUEL": 2532541
+  },
+  "2025-05-22 05:10": {
+    "LTVL": 584789.060706,
+    "TVL_USD": 521546.919656,
+    "TVL_TOKEN": 521641.40978096775,
+    "SHARES": 510973.595591,
+    "PPS": 1.0208774274874794,
+    "VAULT_PNL_SPOT": 10245.504909467476,
+    "FUEL": 2532541
+  },
+  "2025-05-22 05:20": {
+    "LTVL": 584850.57471,
+    "TVL_USD": 521091.970718,
+    "TVL_TOKEN": 521171.6161643823,
+    "SHARES": 510973.595591,
+    "PPS": 1.0199580186948547,
+    "VAULT_PNL_SPOT": 10245.504909467476,
+    "FUEL": 2532541
+  },
+  "2025-05-22 05:30": {
+    "LTVL": 585253.427762,
+    "TVL_USD": 521115.20695100003,
+    "TVL_TOKEN": 521191.29045558075,
+    "SHARES": 510973.595591,
+    "PPS": 1.0199965222327443,
+    "VAULT_PNL_SPOT": 10245.504909467476,
+    "FUEL": 2532541
+  },
+  "2025-05-22 05:40": {
+    "LTVL": 584786.913282,
+    "TVL_USD": 521253.160102,
+    "TVL_TOKEN": 521346.29340385366,
+    "SHARES": 510973.595591,
+    "PPS": 1.020299870487156,
+    "VAULT_PNL_SPOT": 10132.793681217532,
+    "FUEL": 2532541
   }
 }
